# RenderingEngine

./: .gitignore  CMakeLists.txt  Generate_Solution.bat  README.md  TODO.txt  gen_sln.bat  vs-chromium-project.txt
RenderingEngine/: Global_Config.h  RenderingEngine.sln  RenderingEngine.vcxproj  RenderingEngine.vcxproj.filters  assertm.h  blendstate.cpp  blendstate.h  bloomBuffer.cpp  bloomBuffer.h  boundingvolume.cpp  boundingvolume.h  camera.cpp  camera.h  colors.h  computerBloom.cpp  computerBloom.h  computerHDR.cpp  computerHDR.h  computerPointLight.cpp  computerPointLight.h  constbuffer.cpp  constbuffer.h  constbuffer_mgr.cpp  constbuffer_mgr.h  control.cpp  control.h  create_sdl_window.cpp  depthbuffer.cpp  depthbuffer.h  device.cpp  device.h  dx11debug.h  dxdebug.h  engine.cpp  engine.h  factory.cpp  factory.h  gbuffer.cpp  gbuffer.h  graphics.cpp  (+84 more)
RenderingEngine/shaders/: Compile_Shaders.bat  compile.bat  compile.sh  cs_bloomDownsample.hlsl  cs_bloomUpsample.hlsl  cs_luminanceAverage.hlsl  cs_luminanceHistogram.hlsl  cs_ptLightMovement.hlsl  debugRendering.hlsl  deferredRendering.hlsl  deferredRenderingLighting.hlsl  deferredRenderingLightingEnv.hlsl  deferredRenderingLightingLocal.hlsl  forwardRendering.hlsl  fullscreenRendering.hlsl  globalResources.hlsl  hdrRendering.hlsl  helper.hlsl  light_pixel.hlsl  luminanceAverage.hlsl  luminanceHistogram.hlsl  ps_deferredRendering.hlsl  ps_deferredRenderingLightingEnv.hlsl  ps_deferredRenderingLightingLocal.hlsl  ps_hdrRendering.hlsl  ps_instancedDeferredRendering.hlsl  ps_instancedWireframeRendering.hlsl  ps_ssaoRendering.hlsl  ps_textureBlur.hlsl  ps_tonemapping.hlsl  ptLightMovement.hlsl  ssaoRendering.hlsl  textureBlur.hlsl  triangle.hlsl  utility.hlsl  utility_tonemappers.hlsl  vs_csmShadowCast.hlsl  vs_fullscreenRendering.hlsl  vs_instancedRendering.hlsl
RenderingEngine/x64/Debug/: RenderingEngine.exe.recipe  RenderingEngine.ilk  RenderingEngine.vcxproj.FileListAbsolute.txt  create_sdl_window.obj.enc  vc143.idb
RenderingEngine/x64/Debug/RenderingEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RenderingEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
